--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="uk">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<title>Svelte app</title>
+	<title>Web Studio "ProfiWM"</title>
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./build/bundle.css'>
-	<script defer src='./build/bundle.js'></script>
+	<link rel='stylesheet' href='./build/styles.css'>
+	<!--ssr-head-->
 </head>
 
 <body>
+	<noscript>You need to enable JavaScript to run this app.</noscript>
+	<div id="root"><!--ssr-html--></div>
+	<script src="./build/script.js"></script>
 </body>
+
 </html>
